<resources>
    <string name="app_name">ExMail</string>
    <string name="hello_world">Hello world!</string>
    <string name="Tab1_Name">Отслеживание</string>
    <string name="Tab2_Name">Калькулятор</string>
    <string name="Tab3_Name">Вызвать курьера</string>
    <string name="Tab4_Name">Отделения</string>
    <string name="Btn_OK">Ок</string>
    <string name="Btn_Show">Показать</string>
    <string name="Btn_Update">Обновить</string>
    <string name="Menu_Title">Меню</string>
    <string name="Menu_Delete">Удалить</string>
    <string name="Error_Server">Ошибка сервера </string>
    <string name="Error_Server_Wait">Превышение ожидания ответа. Возможно что-то произошло с сервером. Попробуйте позже отправить запрос.</string>
    <string name="Error_Server_NoInternet">У вас нет интернет соединения. Проверьте подключение и попробуйте заново.</string>
    <string name="Error_Server_Weight">Объемный вес превышает 100 кг. Цены таких отправлений расчитываются по согласованию.</string>
    <string name="Error_Server_Data">Извините, данных не найдено.</string>
    <string name="Error_Server_City">Стоимость такого отправления уточняйте у менеджеров компании.</string>
    <string name="Error_Server_Departure">Не найдено отправление с номером </string>
    <string name="Error_FillFields">Пожалуйста, заполните все поля формы.</string>
    <string name="Error_NumberDeliver">Пожалуйста, введите номер заказа для поиска.</string>
    <string name="Error_CallError">Произошла ошибка.</string>
    <string name="Error_FavExist">Такой перевод уже находится в избранном.</string>
    <string name="Info_Rubles"> руб.</string>
    <string name="Info_CallDone">Заявка успешно отправлена.</string>
    <string name="Info_FavAdd">Отправление добавлено в список избранных.</string>
    <string name="Info_Loading">Получение данных...</string>
    <string name="Info_Exp_Phone">тел.: </string>
    <string name="Info_Exp_Address">адрес: </string>
    <string name="Info_Exp_Email">email: </string>
    <string name="Info_Exp_Fax">факс: </string>
    <string name="Delivery_Name">Отслеживание</string>
    <string name="Delivery_Hint">Номер отправления</string>
    <string name="DeliveryInfo_Name">Детали отправления</string>
    <string name="DeliveryInfo_Text1">№ отправления</string>
    <string name="DeliveryInfo_Text2">Откуда</string>
    <string name="DeliveryInfo_Text3">Куда</string>
    <string name="DeliveryInfo_Button">В избранное</string>
    <string name="Calculator_Name">Калькулятор</string>
    <string name="Calculator_CheckLetter">Письмо</string>
    <string name="Calculator_CheckParcel">Посылка</string>
    <string name="Calculator_Auto1">Откуда</string>
    <string name="Calculator_Auto2">Куда</string>
    <string name="Calculator_Auto3">Вес (кг)</string>
    <string name="Calculator_EditHint1">Длина</string>
    <string name="Calculator_EditHint2">Ширина</string>
    <string name="Calculator_EditHint3">Высота</string>
    <string name="Calculator_Button">Расчитать</string>
    <string name="Call_Name">Вызвать курьера</string>
    <string name="Call_DatePicker">Дата прибытия</string>
    <string name="Call_TimePicker">Время прибытия</string>
    <string name="Call_EditNameCompany">Название организации</string>
    <string name="Call_EditAdress">Адрес</string>
    <string name="Call_EditPerson">Контактное лицо</string>
    <string name="Call_EditPhone">Контактный телефон</string>
    <string name="Call_EditEmail">E-Mail</string>
    <string name="Call_EditComment">Комментарий</string>
    <string name="Call_Button">Отправить</string>
    <string name="Offices_Name">Отделения</string>
    <string name="Offices_Info">Единая справочная служба 8&#8211;800&#8211;4783899</string>
    <string name="FavState_Cancel">Возврат клиенту</string>
    <string name="FavState_Done">Доставлено</string>
    <string name="FavState_Send">Отправлено</string>
</resources>