<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo"/>

    <Button
        android:id="@+id/MenuAct_Btn1"
        android:layout_height="70dip"
        android:layout_width="match_parent"
        android:layout_marginRight="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:background="@color/red"
        android:drawableLeft="@drawable/ic_tab_delivery"
        android:drawablePadding="2dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/Tab1_Name"/>

    <Button
        android:id="@+id/MenuAct_Btn2"
        android:layout_height="70dip"
        android:layout_width="match_parent"
        android:layout_marginRight="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:background="@color/red"
        android:drawableLeft="@drawable/ic_tab_calculator"
        android:drawablePadding="2dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/Tab2_Name"/>

    <Button
        android:id="@+id/MenuAct_Btn3"
        android:layout_height="70dip"
        android:layout_width="match_parent"
        android:layout_marginRight="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:background="@color/red"
        android:drawableLeft="@drawable/ic_tab_departure"
        android:drawablePadding="2dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/Tab3_Name"/>

    <Button
        android:id="@+id/MenuAct_Btn4"
        android:layout_height="70dip"
        android:layout_width="match_parent"
        android:layout_marginRight="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:background="@color/red"
        android:drawableLeft="@drawable/ic_tab_contact"
        android:drawablePadding="2dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/Tab4_Name"/>
    </LinearLayout>
</ScrollView>