<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/gradient"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/Calculator_Name"
            android:gravity="center"/>

    <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

            <RadioGroup
                android:id="@+id/Calc_RGroup"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Calc_Radio1"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:textSize="20sp"
                    android:text="@string/Calculator_CheckLetter"/>

                <RadioButton
                    android:id="@+id/Calc_Radio2"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="5dip"
                    android:layout_marginRight="10dip"
                    android:textSize="20sp"
                    android:text="@string/Calculator_CheckParcel"/>

            </RadioGroup>

            <AutoCompleteTextView
                    android:id="@+id/Calc_Auto1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:imeOptions="actionNext"
                    android:hint="@string/Calculator_Auto1"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

            <AutoCompleteTextView
                    android:id="@+id/Calc_Auto2"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:imeOptions="actionDone"
                    android:hint="@string/Calculator_Auto2"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip">

                <TextView
                    android:id="@+id/Calc_WeightName"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="@string/Calculator_Auto3"
                    android:textSize="20sp"/>

                <Spinner
                    android:id="@+id/Calc_Spin1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_toRightOf="@+id/Calc_WeightName"/>

            </RelativeLayout>

            <EditText
                    android:id="@+id/Calc_Length"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:imeOptions="actionNext"
                    android:hint="@string/Calculator_EditHint1"
                    android:lines="1"
                    android:inputType="number"
                    android:textSize="20sp"/>

            <EditText
                    android:id="@+id/Calc_Width"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:imeOptions="actionNext"
                    android:hint="@string/Calculator_EditHint2"
                    android:lines="1"
                    android:inputType="number"
                    android:textSize="20sp"/>

            <EditText
                    android:id="@+id/Calc_Height"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:imeOptions="actionDone"
                    android:hint="@string/Calculator_EditHint3"
                    android:lines="1"
                    android:inputType="number"
                    android:textSize="20sp"/>

            <TextView
                    android:id="@+id/Calc_Summa"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:visibility="gone"/>

            <Button
                    android:id="@+id/Calc_calculate"
                    android:layout_height="50dip"
                    android:layout_width="match_parent"
                    android:background="@drawable/red_button"
                    android:layout_marginTop="5dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginBottom="10dip"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/Calculator_Button"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>